Final Final Final Commit

--- a/Project1/report.html
+++ b/Project1/report.html
@@ -363,6 +363,14 @@ display: none;
 <a href="index.html"> HOME </a>
 </h2>
 <p><br></p>
+<div id="link-to-github-repo-and-page" class="section level2">
+<h2>Link to Github Repo and Page</h2>
+<p>
+Github repo: <a href="https://github.com/521minsu/stats220"> LINK </a>
+<br> Github page: <a href="https://521minsu.github.io/stats220"> LINK
+</a>
+</p>
+</div>
 <div id="project-requirements" class="section level2">
 <h2>Project Requirements</h2>
 <p>
